--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,39 @@
   </head>
 
   <body>
-    <%= yield %>
+    
+    <header class="sticky-top">
+      <nav class="navbar navbar-expand-lg navbar-light mb-4">
+        <%= link_to "Re:room", root_path %>
+       
+     
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto mr-3">
+            <% if user_signed_in? %>
+              <li class="nav-item mx-2"><%= link_to "My page", user_path(current_user), class: "nav-link" %></li>
+              <li class="nav-item mx-2"><%= link_to "Chats", chats_path, class: "nav-link" %></li>
+              <li class="nav-item mx-2"><%= link_to "Users", users_path, class: "nav-link" %></li>
+              <li class="nav-item mx-2"><%= link_to "Contents", root_path, class: "nav-link" %></li>
+              <li class="nav-item mx-2"><%= link_to "About", about_homes_path, class: "nav-link" %></li>
+              <li class="nav-item mx-2"><%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+            <% else %>
+              <li class="nav-item mx-2"><%= link_to "About", about_homes_path, class: "nav-link" %></li>
+              <li class="nav-item mx-2"><%= link_to "Sign up", new_user_registration_path, class: "nav-link" %></li>
+              <li class="nav-item mx-2"><%= link_to "Log in", new_user_session_path, class: "nav-link" %></li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    
+    <main>
+      <%= yield %>
+    </main>
+    
+
   </body>
 </html>
