--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,43 @@
-<h1>Homes#about</h1>
-<p>Find me in app/views/homes/about.html.erb</p>
+<div class="container">
+
+  <div class="row">
+    <div class="col-12 my-5">
+      <div class="text-center" style="font-size: 100%;">
+        <h1>About</h1>
+        <p>このアプリではユーザーの皆さんのオシャレなお部屋の一角や</p>
+        <p>機能美あふれるポイントのイメージ等をシェアていただくことができます。</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    
+    <div class="theTarget">
+      <div class="background-image1"></div>
+      <div class="background-image2"></div>
+      <div class="background-image3"></div>
+      <div class="background-image4"></div>
+      <div class="background-image5"></div>
+      <div class="background-image6"></div>
+      <div class="background-image7"></div>
+      <div class="background-image8"></div>
+      <div class="background-image9"></div>
+      
+    </div>
+    
+
+    <div class="container">
+      <div class="row">
+        <div class="col-12 my-5">
+          <div class="text-center" style="font-size: 100%;">
+            <p>そして、これらの情報をヒントに貴方のお部屋に取り込むことが出来れば</p>
+            <p>また違った毎日を快適に過ごせるでしょう。</p>
+            <P>自身の新しい空間と出会える可能性を秘めたSNS。</P>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
