--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 my-5">
+      <div class="text-center" style="font-size: 100%;">
+        
+        <h1>Users</h1>
+        <% @users.each do |user| %>
+          <div><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "0.jpeg", class: "user-image" %></div>
+          <div><%= user.name %></div>
+          <div><%= user.greeting %></div>
+        <% end %>
+        
+      </div>
+    </div>
+  </div>
+</div>
