--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,9 +3,9 @@
     <div class="col-12 my-5">
       <div class="text-center" style="font-size: 100%;">
         
-        <h1>Users</h1>
+        <h1>Users</h1>q
         <% @users.each do |user| %>
-          <div><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpg", class: "user-image" %></div>
+          <div><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
           <div><%= user.name %></div>
           <div><%= user.greeting %></div>
         <% end %>
