--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,8 +5,10 @@
 
         <h1>Users</h1>
         <% @users.each do |user| %>
-          <div><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
-          <div><%= user.name %></div>
+          <%= link_to user_path(user.id), class: 'link' do %>
+            <div><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
+            <div><%= user.name %></div>
+          <% end %>
           <div><%= user.greeting %></div>
         <% end %>
 
