--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Contents#index</h1>
-<p>Find me in app/views/contents/index.html.erb</p>
+¥<div class="container">
+  <div class="row">
+    <div class="col-12 my-5">
+      <div class="text-center" style="font-size: 100%;">
+
+        <h1>Contents</h1>
+        <% @contents.each do |content| %>
+        
+          <%= link_to user_path(user.id), class: 'link' do %>
+            <div><%= attachment_image_tag content, :content_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
+          <% end %>
+          
+          <%= link_to user_path(user.id), class: 'link' do %>
+            <div><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
+            <div><%= user.name %></div>
+          <% end %>
+          
+        <% end %>
+
+      </div>
+    </div>
+  </div>
+</div>
