--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,20 +1,22 @@
-¥<div class="container">
+<div class="container">
   <div class="row">
     <div class="col-12 my-5">
       <div class="text-center" style="font-size: 100%;">
 
         <h1>Contents</h1>
         <% @contents.each do |content| %>
-        
-          <%= link_to user_path(user.id), class: 'link' do %>
-            <div><%= attachment_image_tag content, :content_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
+
+          <%= link_to content_path(content.id), class: 'link' do %>
+            <div><%= attachment_image_tag content, :content_image, :fill, 350, 300, format: 'jpg' %></div>
+          <% end %>
+
+          <%= link_to user_path(content.user.id), class: 'link' do %>
+            <div><%= attachment_image_tag content.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
+            <div><%= content.user.name %></div>
           <% end %>
           
-          <%= link_to user_path(user.id), class: 'link' do %>
-            <div><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
-            <div><%= user.name %></div>
-          <% end %>
-          
+          <div><%= content.description %></div>
+
         <% end %>
 
       </div>
