--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -1,2 +1,18 @@
-<h1>Contents#new</h1>
-<p>Find me in app/views/contents/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 my-5">
+      <div class="text-center" style="font-size: 100%;">
+        
+        <h1>画像投稿フォーム</h1>
+        <%= form_with model: @content, local:true do |f| %>
+          <h4>画像</h4>
+          <%= f.attachment_field :content_image %>
+          <h4>説明</h4>
+          <%= f.text_area :description %>
+          <%= f.submit '投稿' %>
+        <% end %>
+        
+      </div>
+    </div>
+  </div>
+</div>
