--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -1,2 +1,23 @@
-<h1>Contents#show</h1>
-<p>Find me in app/views/contents/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 my-5">
+      <div class="text-center" style="font-size: 100%;">
+
+        <h1>Content Show</h1>
+
+        <div><%= attachment_image_tag @content, :content_image, :fill, 1000, 600, format: 'jpg' %></div>
+
+          <%= link_to user_path(@content.user.id), class: 'link' do %>
+            <div><%= attachment_image_tag @content.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
+            <div><%= @content.user.name %></div>
+          <% end %>
+
+          <div><%= @content.description %></div>
+          
+          <div><%= link_to "変更する", edit_content_path(@content) %></div>
+          <div><%= link_to "削除する", content_path, method: :delete %></div>
+
+      </div>
+    </div>
+  </div>
+</div>
