--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,11 +9,17 @@
         <div><%= @user.name %></div>
         <div><%= @user.introduction %></div>
         
+        <% if current_user != @user %>
+            <% if @user.followed_by?(current_user) %>
+              <div><%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, class: "btn btn-primary" %></div>
+            <% else %>
+              <div><%= link_to "フォローする", user_relationships_path(@user.id), method: :post, class: "btn btn-success" %></div>
+            <% end %>
+          <% end %>
+        
         <div><%= link_to "Config", edit_user_path(current_user) %></div>
         
       </div>
     </div>
   </div>
 </div>
-
-
