--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,14 @@
         <div><%= @user.name %></div>
         <div><%= @user.introduction %></div>
         
+        <div class="following">
+          <p>フォロー数：<%= @user.followings.count %></p>
+        </div>
+        
+        <div class="follower">
+          <p>フォロワー数：<%= @user.followers.count %></p>
+        </div>
+        
         <% if current_user != @user %>
             <% if @user.followed_by?(current_user) %>
               <div><%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete, class: "btn btn-primary" %></div>
