--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -10,6 +10,10 @@
             <div><%= attachment_image_tag content, :content_image, :fill, 350, 300, format: 'jpg' %></div>
           <% end %>
 
+          <div class="favorite_buttons_<%= content.id %>">
+            <%= render 'favorites/favorite',content: content %>
+          </div>
+
           <%= link_to user_path(content.user.id), class: 'link' do %>
             <div><%= attachment_image_tag content.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
             <div><%= content.user.name %></div>
