--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -7,15 +7,21 @@
 
         <div><%= attachment_image_tag @content, :content_image, :fill, 1000, 600, format: 'jpg' %></div>
 
-          <%= link_to user_path(@content.user.id), class: 'link' do %>
-            <div><%= attachment_image_tag @content.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
-            <div><%= @content.user.name %></div>
-          <% end %>
+        
+        <div class="favorite_buttons_<%= @content.id %>">
+          <%= render 'favorites/favorite',content: @content %>
+        </div>
+        
 
-          <div><%= @content.description %></div>
-          
-          <div><%= link_to "変更する", edit_content_path(@content) %></div>
-          <div><%= link_to "削除する", content_path, method: :delete %></div>
+        <%= link_to user_path(@content.user.id), class: 'link' do %>
+          <div><%= attachment_image_tag @content.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
+          <div><%= @content.user.name %></div>
+        <% end %>
+
+        <div><%= @content.description %></div>
+        
+        <div><%= link_to "変更する", edit_content_path(@content) %></div>
+        <div><%= link_to "削除する", content_path, method: :delete %></div>
 
       </div>
     </div>
