--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,6 +31,32 @@
 
         <div><%= link_to "Config", edit_user_path(current_user) %></div>
 
+
+
+
+
+
+        <h1>Contents</h1>
+        <% @user.contents.each do |content| %>
+
+          <%= link_to content_path(content.id), class: 'link' do %>
+            <div><%= attachment_image_tag content, :content_image, :fill, 350, 300, format: 'jpg' %></div>
+          <% end %>
+
+          <div class="favorite_buttons_<%= content.id %>">
+            <%= render 'favorites/favorite',content: content %>
+          </div>
+
+          <%= link_to user_path(content.user.id), class: 'link' do %>
+            <div><%= attachment_image_tag content.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
+            <div><%= content.user.name %></div>
+          <% end %>
+
+          <div><%= content.description %></div>
+
+        <% end %>
+
+
       </div>
     </div>
   </div>
