--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,13 +1,18 @@
-<% if content.favorited_by?(current_user) %>
-  <p>
-    <%= link_to content_favorites_path(content), method: :delete, remote: true do %>
-      ♥<%= content.favorites.count %> いいね
-    <% end %>
-  </p>
+<% if user_signed_in? %>
+
+  <% if content.favorited_by?(current_user) %>
+    <p>
+      <%= link_to content_favorites_path(content), method: :delete, remote: true do %>
+        ♥<%= content.favorites.count %> いいね
+      <% end %>
+    </p>
+  <% else %>
+    <p>
+      <%= link_to content_favorites_path(content), method: :post, remote: true do %>
+         ♡<%= content.favorites.count %> いいね
+      <% end %>
+    </p>
+  <% end %>
+  
 <% else %>
-  <p>
-    <%= link_to content_favorites_path(content), method: :post, remote: true do %>
-       ♡<%= content.favorites.count %> いいね
-    <% end %>
-  </p>
 <% end %>
