--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Comments#index</h1>
-<p>Find me in app/views/comments/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 my-5">
+      <div class="text-center" style="font-size: 100%;">
+
+        <h1>Comments</h1>
+
+        <div><%= attachment_image_tag @content, :content_image, :fill, 350, 300, format: 'jpg' %></div>
+
+
+        <div class="comment-form">
+        <%= form_with(model:[@content, @c_comment], remote: true) do |f| %>
+          <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに", class:"textarea1" %>
+          <%= f.submit "送信する" %>
+        <% end %>
+        </div>
+
+        <div class="comment-index">
+          <%= render 'comments/c_comment',comments: @comments %>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
