[fix view/comments]

--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -7,6 +7,9 @@
 
         <div><%= attachment_image_tag @content, :content_image, :fill, 1000, 600, format: 'jpg' %></div>
 
+        <div class="comment-count">
+          コメント件数：<%= link_to @content.comments.count, content_comments_path(@content) %>
+        </tdiv>
         
         <div class="favorite_buttons_<%= @content.id %>">
           <%= render 'favorites/favorite',content: @content %>
