--- a/app/views/favorites/_favorite.html.erb
+++ b/app/views/favorites/_favorite.html.erb
@@ -1,15 +1,15 @@
 <% if user_signed_in? %>
 
   <% if content.favorited_by?(current_user) %>
-    <p>
+    <p>♥<%= link_to content.favorites.count, content_favorites_path(content), method: :get %>
       <%= link_to content_favorites_path(content), method: :delete, remote: true do %>
-        ♥<%= content.favorites.count %> いいね
+         いいね
       <% end %>
     </p>
   <% else %>
-    <p>
+    <p>♡<%= link_to content.favorites.count, content_favorites_path(content), method: :get %>
       <%= link_to content_favorites_path(content), method: :post, remote: true do %>
-         ♡<%= content.favorites.count %> いいね
+         いいね
       <% end %>
     </p>
   <% end %>
