--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -4,20 +4,20 @@
       <div class="text-center" style="font-size: 100%;">
 
         <h1>Favorites</h1>
-        <% @users.each do |user| %>
+        <% @content.favorites.each do |favo| %>
 
-          <%= link_to user_path(user.id), class: 'link' do %>
-            <div><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
-            <div><%= user.name %></div>
+          <%= link_to user_path(favo.user.id), class: 'link' do %>
+            <div><%= attachment_image_tag favo.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
+            <div><%= favo.user.name %></div>
           <% end %>
 
-          <div><%= user.greeting %></div>
+          <div><%= favo.user.greeting %></div>
 
-          <% if current_user != user %>
+          <% if current_user != favo.user %>
             <% if user.followed_by?(current_user) %>
-              <div><%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-primary" %></div>
+              <div><%= link_to "フォロー外す", user_relationships_path(favo.user.id), method: :delete, class: "btn btn-primary" %></div>
             <% else %>
-              <div><%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %></div>
+              <div><%= link_to "フォローする", user_relationships_path(favo.user.id), method: :post, class: "btn btn-success" %></div>
             <% end %>
           <% end %>
 
