--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -14,7 +14,7 @@
           <div><%= favo.user.greeting %></div>
 
           <% if current_user != favo.user %>
-            <% if user.followed_by?(current_user) %>
+            <% if favo.user.followed_by?(current_user) %>
               <div><%= link_to "フォロー外す", user_relationships_path(favo.user.id), method: :delete, class: "btn btn-primary" %></div>
             <% else %>
               <div><%= link_to "フォローする", user_relationships_path(favo.user.id), method: :post, class: "btn btn-success" %></div>
