[add controller/chats(show create chat_params) view/chats(show index)]

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Chats#index</h1>
-<p>Find me in app/views/chats/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12 my-5">
+      <div class="text-center" style="font-size: 100%;">
+
+        <h1>Users</h1>
+        
+      </div>
+    </div>
+  </div>
+</div>
