--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,14 @@
           <% end %>
 
         <div><%= link_to "Config", edit_user_path(current_user) %></div>
-
+        
+        <% if current_user != @user %>
+        <div>
+          <div>
+            <%= link_to 'Direct Messenge', chat_path(@user.id) %>
+          </div>
+        </div>
+        <% end %>
 
 
 
