--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -17,7 +17,7 @@
         </div>
         
         <div class="comment-index">
-          <%= render 'comments/c_comment',comments: @comments %>
+          <%= render 'comments/c_comment',content: @content %>
         </div>
 
 
