--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,3 @@
 $(".comment-count").html("コメント数: <%= @content.comments.count %>");
-$(".comment-index").html("<%= j(render partial: 'comments/c_comment', locals: {comments: @comments}) %>");
+$(".comment-index").html("<%= j(render partial: 'comments/c_comment', locals: {content: @content}) %>");
 $(".textarea1").val('');
