[fix controller/chats(index N + 1) view/chats(index) users(show)]

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -16,12 +16,12 @@
           
           <div><%= room.user.greeting %></div>
           
-          <div><%= link_to "DM", chats_path(room.user.id) %></div>
+          <div><%= link_to "DM", chat_path(room.user.id) %></div>
           
         <% end %>
- 
- 
- 
+
+
+
       </div>
     </div>
   </div>
