--- a/app/views/comments/_c_comment.erb
+++ b/app/views/comments/_c_comment.erb
@@ -1,10 +1,14 @@
 <% content.comments.each do |c_comment| %>
-        
+
   <%= link_to user_path(c_comment.user.id), class: 'link' do %>
     <div><%= attachment_image_tag c_comment.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
     <div><%= c_comment.user.name %></div>
   <% end %>
-  
+
   <%= c_comment.comment %>
-  
+
+  <% if current_user.id == c_comment.user.id %>
+    <div><%= link_to "削除する", content_comment_path(c_comment.content_id, c_comment), method: :delete, data: { confirm: '本当に削除しますか？' } %></div>
+  <% end %>
+
 <% end %>
