--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -27,7 +27,7 @@
         
         <% if current_user.id == @content.user_id %>
           <div><%= link_to "変更する", edit_content_path(@content) %></div>
-          <div><%= link_to "削除する", content_path, method: :delete %></div>
+          <div><%= link_to "削除する", content_path, method: :delete, data: { confirm: '本当に削除しますか？' } %></div>
         <% end %>
         
         <%= link_to 'Comment +', content_comments_path(@content) %>
