--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
     </header>
     
     <main>
+      <p id="notice"><%= notice %></p>
       <%= link_to 'Post +', new_content_path %>
       <%= yield %>
     </main>
