[add layout/sign_in sign_up]

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
   
-  <div class="container">
+  <div class="about">
     
     <div class="theTarget">
       <div class="background-image1"></div>
