--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,8 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
+// ---------------------------------
+
 * {
   margin: 0;
   padding: 0;
@@ -25,10 +27,32 @@
   color: #6c6b6b;
 }
 
-.container {
+// ---------------------------------
+
+.about {
   height :500px;
 }
 
-// .theTarget {
-//   height :500px;
-// }
+// ---------------------------------
+
+#bg_img {
+  background-image: image-url("0.jpeg");
+  background-position: center;
+  background-size: cover;
+  height :750px;
+}
+
+// ---------------------------------
+
+input {
+  background-color: transparent;
+  border-style: solid;
+  border-width: 1px;
+}
+
+input:focus-visible {
+  outline-width: 1px;
+  outline-style: solid;
+}
+
+// ---------------------------------
