--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,51 @@
-<h2>Sign up</h2>
+<div id="bg_img">
+  <div class="row">
+    <div class="col-12 my-5">
+      <div class="text-center">
 
-<%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+
+
+        <div class="row mx-4">
+          <div class="col">
+            <h4 class="page-title">Sign up</h4>
+          </div>
+        </div>
+
+        <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+
+
+            <div class="field mt-5">
+              <%= f.label "Name" %><br />
+              <%= f.text_field :name, autofocus: true, placeholder: "名前" %>
+            </div>
   
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
+            <div class="field mt-4">
+              <%= f.label "Email" %><br />
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com" %>
+            </div>
+  
+            <div class="field mt-4">
+              <%= f.label "Password" %><br />
+              <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード" %>
+            </div>
+  
+            <div class="field mt-4">
+              <%= f.label "Password(確認用)" %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード(確認用)" %>
+            </div>
+  
+            <div class="actions mt-5">
+              <%= f.submit "     Sign up >>     " %>
+            </div>
+          
+          
+        <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+      </div>
+    </div>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
