--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,21 +1,27 @@
-<div class="container">
+<div class="w-100 mx-0">
   <div class="row">
-    <div class="col-12 my-5">
-      <div class="text-center" style="font-size: 100%;">
+
+    <div class="col-2 text-center">
+      <div class="side_left">
+        <%= link_to 'Post +', new_content_path %>
+      </div>
+    </div>
 
 
+    <div class="col-8">
+      <div class="text-center">
 
         <h1>Users</h1>
-        
+
         <% @users.each do |user| %>
-        
+
           <%= link_to user_path(user.id), class: 'link' do %>
             <div><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
             <div><%= user.name %></div>
           <% end %>
-          
+
           <div><%= user.greeting %></div>
-          
+
           <% if current_user != user %>
             <% if user.followed_by?(current_user) %>
               <div><%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-primary" %></div>
@@ -23,12 +29,20 @@
               <div><%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %></div>
             <% end %>
           <% end %>
-          
+
          <% end %>
-
-
 
       </div>
     </div>
+
+
+    <div class="side_right col-2 text-center">
+      <span id="back">
+        <a href="#">
+          <%= image_tag "arrow.png" %>
+        </a>
+      </span>
+    </div>
+
   </div>
 </div>
