--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+// ----------------------------
+// Userアイコン用
+
 .user-image {
   width: 100px;
   height: 100px;
@@ -16,4 +20,11 @@
   padding: 10px;
   margin: 0;
   line-height: 3;
+}
+
+// ------------------------------
+// Userコンテンツ一覧用
+
+.user_x {
+  
 }
