--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -18,9 +18,9 @@
           
           <% if current_user != favo.user %>
             <% if favo.user.followed_by?(current_user) %>
-              <div><%= link_to "フォロー外す", user_relationships_path(favo.user.id), method: :delete, class: "btn btn-primary" %></div>
+              <div><%= link_to "フォロー解除", user_relationships_path(favo.user.id), method: :delete, class: "btn btn-secondary" %></div>
             <% else %>
-              <div><%= link_to "フォローする", user_relationships_path(favo.user.id), method: :post, class: "btn btn-success" %></div>
+              <div><%= link_to "フォローする", user_relationships_path(favo.user.id), method: :post, class: "btn btn-info" %></div>
             <% end %>
           <% end %>
           
