--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,12 @@
-<div class="w-100 mx-0">
+<div class="container-fluid">
   <div class="row">
 
     <div class="col-2 text-center">
+      
       <div class="side_left">
-        <%= link_to 'Post +', new_content_path %>
+        <%= link_to new_content_path do %>
+        <i class="far fa-plus-square fa-3x"></i>
+        <% end %>
       </div>
     </div>
 
@@ -16,17 +19,19 @@
         <% @users.each do |user| %>
 
           <%= link_to user_path(user.id), class: 'link' do %>
+          <div class="user_x">
             <div><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
             <div><%= user.name %></div>
+          </div>
           <% end %>
 
           <div><%= user.greeting %></div>
 
           <% if current_user != user %>
             <% if user.followed_by?(current_user) %>
-              <div><%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-primary" %></div>
+              <div><%= link_to "フォロー解除", user_relationships_path(user.id), method: :delete, class: "btn btn-secondary" %></div>
             <% else %>
-              <div><%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %></div>
+              <div><%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-info" %></div>
             <% end %>
           <% end %>
 
@@ -39,7 +44,7 @@
     <div class="side_right col-2 text-center">
       <span id="back">
         <a href="#">
-          <%= image_tag "arrow.png" %>
+          <i class="fas fa-angle-double-up fa-3x"></i>
         </a>
       </span>
     </div>
