--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,3 +72,31 @@ a,
 a:hover{
   text-decoration: none !important;
 }
+
+// ------------------------------
+// サイドバー（左）の固定編集
+
+.side_left {
+  position: -webkit-fixed;
+  position: fixed;
+  bottom: 0;
+  padding: 10px;
+  margin: 0;
+  line-height: 3;
+}
+
+// ------------------------------
+// cardマウスホバー時のシャドー等
+
+.card {
+  border: none !important;
+  background-color: transparent;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.2s ease-out, transform 0.2s ease-out;
+}
+
+.card:hover {
+   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+   transform: translateY(-2px);
+ }
+ 
