--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,56 +1,111 @@
 <div class="container-fluid">
+
   <div class="row">
-    
-    <div class="col-2 text-center">
+    <h1 class="col-12 text-center mb-5">Contents</h1>
+  </div>
+
+  <div class="row">
+
+    <div class="col-1 text-center">
       <div class="side_left">
         <%= link_to new_content_path do %>
         <i class="far fa-plus-square fa-3x"></i>
         <% end %>
       </div>
     </div>
-------------
 
-    <div class="col-8">
+
+
+
+    <div class="col-5">
       <div class="text-center">
-        
-        <h1 class="mb-5">Contents</h1>
-        <% @contents.each do |content| %>
-          <div class="user d-flex flex-row justify-content-between align-items-center mb-3">
 
-            <%= link_to content_path(content.id), class: 'd-flex flex-row' do %>
-              <div><%= attachment_image_tag content, :content_image, :fill, 350, 300, format: 'jpg' %></div>
+        <h4 class="mb-5">New</h4>
+        <% @contents_reverse.each do |content| %>
+          <div class="card mb-5">
+
+            <%= link_to content_path(content.id), class: "card_image" do %>
+              <div><%= attachment_image_tag content, :content_image, :fill, 800, 500, format: 'jpg', class: "content-image" %></div>
             <% end %>
-            
-            
-            <%= link_to content_path(content.id), class: 'd-flex flex-row' do %>
-              <div class="p-2 ml-3">
-                <%= attachment_image_tag user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
+
+            <div class="card_show d-flex flex-row">
+              <%= link_to content_path(content.id) do %>
+                <div class="p-2 card_item1">
+                  <%= attachment_image_tag content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
+                </div>
+              <% end %>
+
+              <div>
+                <div class="card_item1 d-flex pl-2 pt-2">
+                  <div class="pl-2 card_item2">
+                    コメント件数：<%= link_to content.comments.count, content_comments_path(content.id) %>
+                  </div>
+
+                  <div class="pl-5 pr-2 card_item2 favorite_buttons_<%= content.id %>">
+                    <%= render 'favorites/favorite',content: content %>
+                  </div>
+                </div>
+
+                <div class="pb-2 px-2 card_item">
+                  <%= content.description.truncate(33) %>
+                </div>
               </div>
-            <% end %>
-  
-    
-            <div class="p-2">
-              コメント件数：<%= link_to content.comments.count, content_comments_path(content.id) %>
+
             </div>
-  
-            <div class="p-2 favorite_buttons_<%= content.id %>">
-              <%= render 'favorites/favorite',content: content %>
-            </div>
-  
-            <%= link_to user_path(content.user.id), class: 'link' do %>
-              <div><%= attachment_image_tag content.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
-              <div><%= content.user.name %></div>
+
+          </div>
+        <% end %>
+
+      </div>
+    </div>
+
+
+    <div class="col-5">
+      <div class="text-center">
+
+        <h4 class="mb-5">Old</h4>
+        <% @contents.each do |content| %>
+          <div class="card mb-5">
+
+            <%= link_to content_path(content.id), class: "card_image" do %>
+              <div><%= attachment_image_tag content, :content_image, :fill, 800, 500, format: 'jpg', class: "content-image" %></div>
             <% end %>
-  
-            <div><%= content.description %></div>
-  
-          <% end %>
+            
+            <div class="card_show d-flex flex-row">
+              <%= link_to content_path(content.id) do %>
+                <div class="p-2 card_item1">
+                  <%= attachment_image_tag content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
+                </div>
+              <% end %>
+
+            <div>
+                <div class="card_item1 d-flex pl-2 pt-2">
+                  <div class="pl-2 card_item2">
+                    コメント件数：<%= link_to content.comments.count, content_comments_path(content.id) %>
+                  </div>
+
+                  <div class="pl-5 pr-2 card_item2 favorite_buttons_<%= content.id %>">
+                    <%= render 'favorites/favorite',content: content %>
+                  </div>
+                </div>
+
+                <div class="pb-2 px-2 card_item">
+                  <%= content.description.truncate(33) %>
+                </div>
+              </div>
+              
+             </div>
+             
+          </div>
+        <% end %>
+
+      </div>
+    </div>
 
 
 
 
-----------
-    <div class="side_right col-2 text-center">
+    <div class="side_right col-1 text-center">
       <span id="back">
         <a href="#">
           <i class="fas fa-angle-double-up fa-3x"></i>
