--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
         
         <h1 class="mb-5">Users</h1>
         <% @users.each do |user| %>
-          <div class="user d-flex flex-row justify-content-between align-items-center mb-3">
+          <div class="card d-flex flex-row justify-content-between align-items-center mb-3">
             
             <%= link_to user_path(user.id), class: 'd-flex flex-row' do %>
               <div class="p-2 ml-3">
