[add layoute/comments(index _c_comment)]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,16 +42,16 @@
 // ---------------------------------
 // 全ての submit（input） フォームを編集
 
-input {
-  background-color: transparent;
-  border-style: solid;
-  border-width: 1px;
-}
+// input {
+//   background-color: transparent;
+//   border-style: solid;
+//   border-width: 1px;
+// }
 
-input:focus-visible {
-  outline-width: 1px;
-  outline-style: solid;
-}
+// input:focus-visible {
+//   outline-width: 1px;
+//   outline-style: solid;
+// }
 
 // ---------------------------------
 // TOPにバックする為のボタン編集
