--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,9 @@
     </header>
 
     <main>
-      <p id="notice"><%= notice %></p>
+      <div class=" text-center">
+        <p id="notice"><%= notice %></p>
+      </div>
       <%= yield %>
     </main>
 
