--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div id="bg_img">
-  <div class="row">
-    <div class="col-12 my-5">
+  <div class="row justify-content-center">
+    <div class="col-2 my-5">
       <div class="text-center">
 
 
@@ -17,29 +17,29 @@
 
             <div class="field mt-5">
               <%= f.label "Name" %><br />
-              <%= f.text_field :name, autofocus: true, placeholder: "ユーザー名" %>
+              <%= f.text_field :name, autofocus: true, placeholder: "ユーザー名", class: "form-control" %>
             </div>
-  
+
             <div class="field mt-4">
               <%= f.label "Email" %><br />
-              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com" %>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com", class: "form-control" %>
             </div>
-  
+
             <div class="field mt-4">
               <%= f.label "Password" %><br />
-              <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード" %>
+              <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード", class: "form-control" %>
             </div>
-  
+
             <div class="field mt-4">
               <%= f.label "Password" %><br />
-              <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "(再確認)" %>
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "(再確認)", class: "form-control" %>
             </div>
-  
+
             <div class="actions mt-5">
-              <%= f.submit "     Sign up >>     " %>
+              <%= f.submit "Sign up >>", class: "btn btn-outline-secondary" %>
             </div>
-          
-          
+
+
         <% end %>
 
 
