--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
-    
-    <div class="col-2 text-center">
+
+    <div class="col-1 text-center">
       <div class="side_left">
         <%= link_to new_content_path do %>
         <i class="far fa-plus-square fa-3x"></i>
@@ -12,27 +12,27 @@
 
 
 
-    <div class="col-8">
+    <div class="col-10">
       <div class="text-center">
-        
+
         <h1 class="mb-5">Users</h1>
         <% @users.each do |user| %>
           <div class="card d-flex flex-row justify-content-between align-items-center mb-3">
-            
+
             <%= link_to user_path(user.id), class: 'd-flex flex-row' do %>
               <div class="p-2 ml-3">
                 <%= attachment_image_tag user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
               </div>
             <% end %>
-            
+
             <div class="p-2">
               <%= user.name %>
             </div>
-            
+
             <div class="p-2">
               <%= user.greeting %>
             </div>
-            
+
             <div class="p-2 mr-3">
               <% if current_user != user %>
                 <% if user.followed_by?(current_user) %>
@@ -42,20 +42,20 @@
                 <% end %>
               <% end %>
             </div>
-            
+
           </div>
         <% end %>
-          
+
       </div>
     </div>
 
 
 
 
-    <div class="side_right col-2 text-center">
+    <div class="side_right col-1 text-center">
       <span id="back">
         <a href="#">
-          <i class="fas fa-angle-double-up fa-3x"></i>
+          <i class="fas fa-angle-double-up fa-3x mr-3"></i>
         </a>
       </span>
     </div>
