--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,11 @@
 <div id="bg_img">
   <div class="row justify-content-center">
     <div class="col-2 my-5">
-      <div class="text-center">
+      <div class="text-center text-nowrap">
 
 
 
-        <div class="row mx-4">
+        <div class="row mx-4 mb-5">
           <div class="col">
             <h4 class="page-title">Sign up</h4>
           </div>
@@ -14,24 +14,23 @@
         <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
 
-
-            <div class="field mt-5">
-              <%= f.label "Name" %><br />
+            <div class="mb-2">Name</div>
+            <div class="card mb-5 form-group">
               <%= f.text_field :name, autofocus: true, placeholder: "ユーザー名", class: "form-control" %>
             </div>
 
-            <div class="field mt-4">
-              <%= f.label "Email" %><br />
+            <div class="mb-2">Email</div>
+            <div class="card mb-5 form-group">
               <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "sample@example.com", class: "form-control" %>
             </div>
 
-            <div class="field mt-4">
-              <%= f.label "Password" %><br />
+            <div class="mb-2">Password</div>
+            <div class="card mb-5 form-group">
               <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード", class: "form-control" %>
             </div>
 
-            <div class="field mt-4">
-              <%= f.label "Password" %><br />
+            <div class="mb-2">Password</div>
+            <div class="card mb-5 form-group">
               <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "(再確認)", class: "form-control" %>
             </div>
 
