--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
 
 
     <div class="col-10">
-      <div class="text-center">
+      <div class="edit_items text-center">
 
         <h1 class="mb-5">Users</h1>
 
@@ -25,24 +25,24 @@
         <%= form_with model:@user, local:true do |f| %>
 
 
-        <div>Image</div>
-        <div class="mb-5 custom-file">
+        <div class="mb-2">Image</div>
+        <div class="card mb-5 custom-file">
           <label class="custom-file-label" for="customFile">画像を選択...</label>
           <%= f.attachment_field :profile_image,class: "custom-file-input"  %>
         </div>
 
-        <div class="mb-5 form-group">
-          <label for="user_introduction">Introduction</label>
-            <%= f.text_field :introduction, size: "30x2",placeholder: "コメントをここに", class: "form-control" %>
+        <div class="mb-2">Introduction</div>
+        <div class="card mb-5 form-group">
+            <%= f.text_area :introduction, :size=>"30x5", placeholder: "自己紹介（MAX:300）", class: "form-control" %>
+        </div>
+
+        <div class="mb-2">greeting</div>
+        <div class="card mb-5 form-group">
+            <%= f.text_field :greeting, placeholder: "ひとこと（MAX:20）", class: "form-control" %>
         </div>
 
         <div class="mb-5 form-group">
-          <label for="user_greeting">Greeting</label>
-            <%= f.text_field :greeting, size: "15x1",placeholder: "コメントをここに", class: "form-control" %>
-        </div>
-
-        <div class="mb-5 form-group">
-          <%= f.submit 'Update User' %>
+          <%= f.submit 'Update User', class: "btn btn-outline-success" %>
         </div>
       　<% end %>
 
@@ -64,3 +64,19 @@
   </div>
 </div>
 
+
+
+
+
+
+<%# jsに書き込むとなぜかうまくいかないのでここに記述する %>
+<script>
+  $('#user_profile_image').on('change', function (e) {
+      console.log('test');
+      var reader = new FileReader();
+      reader.onload = function (e) {
+          $("#preview_image").attr('src', e.target.result);
+      }
+      reader.readAsDataURL(e.target.files[0]);
+  });
+</script>
