--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -6,3 +6,24 @@
   width: 100%;
   height: 60%;
 }
+
+// -----------------------
+// 新規投稿　用イメージ編集
+
+.content-image2 {
+  width: 100%;
+  height: 60%;
+  object-fit: cover;
+  transition: box-shadow 0.2s ease-out, transform 0.2s ease-out;
+}
+
+.content-image2:hover {
+   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
+   transform: translateY(-2px);
+ }
+ 
+ 
+ .content_action {
+   width: 30%;
+   margin: 0 auto;
+ }
