--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -1,23 +1,93 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-12 my-5">
-      <div class="text-center" style="font-size: 100%;">
 
-
-
-        <h1>画像投稿フォーム</h1>
-        
-        <%= form_with model: @content, local:true do |f| %>
-          <h4>画像</h4>
-          <%= f.attachment_field :content_image %>
-          <h4>説明</h4>
-          <%= f.text_area :description %>
-          <%= f.submit '投稿' %>
+    <div class="col-1 text-center">
+      <div class="side_left">
+        <%= link_to new_content_path do %>
+        <i class="far fa-plus-square fa-3x"></i>
         <% end %>
-
-
-
       </div>
     </div>
+
+
+
+
+    <div class="col-10">
+
+
+
+      <div class="edit_items text-center">
+        <h1 class="mb-5">Post Content</h1>
+        <%= form_with model: @content, local:true do |f| %>
+
+        <div class="mb-2">Post Image</div>
+
+        <div class="card mb-5 custom-file">
+          <label class="custom-file-label" for="customFile">画像を選択...</label>
+          <%= f.attachment_field :content_image, class: "custom-file-input" %>
+        </div>
+
+        <div class="mb-2">Introduction</div>
+        <div class="card mb-5 form-group">
+            <%= f.text_area :description, :size=>"30x5", placeholder: "コメント（MAX:300）", class: "form-control" %>
+        </div>
+
+        <div class="mb-5 form-group">
+          <%= f.submit 'Post +', class: "btn btn-outline-success" %>
+        </div>
+
+        <% end %>
+      </div>
+
+      <div class="p-5">
+        <div class="px-5">
+          <%= attachment_image_tag @user, :content_image, :fill, 800, 500, format: 'jpg', fallback: "0.jpeg", class: "content-image2", style: "border-style: none;", id: "preview_image" %>
+        </div>
+      </div>
+
+
+
+    </div>
+
+
+
+
+    <div class="side_right col-1 text-center">
+      <span id="back">
+        <a href="#">
+          <i class="fas fa-angle-double-up fa-3x mr-3"></i>
+        </a>
+      </span>
+    </div>
+
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<%# jsに書き込むとなぜかうまくいかないのでここに記述する %>
+<script>
+  $('#content_content_image').on('change', function (e) {
+
+      var reader = new FileReader();
+      reader.onload = function (e) {
+          $("#preview_image").attr('src', e.target.result);
+      }
+      reader.readAsDataURL(e.target.files[0]);
+  });
+</script>
