--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -1,40 +1,102 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-12 my-5">
-      <div class="text-center" style="font-size: 100%;">
 
-
-
-        <h1>Content Show</h1>
-        
-        <div><%= attachment_image_tag @content, :content_image, :fill, 1000, 600, format: 'jpg' %></div>
-        
-        <div class="comment-count">
-          コメント件数：<%= link_to @content.comments.count, content_comments_path(@content) %>
-        </tdiv>
-        
-        <div class="favorite_buttons_<%= @content.id %>">
-          <%= render 'favorites/favorite',content: @content %>
-        </div>
-        
-        
-        <%= link_to user_path(@content.user.id), class: 'link' do %>
-          <div><%= attachment_image_tag @content.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "0.jpeg", class: "user-image" %></div>
-          <div><%= @content.user.name %></div>
+    <div class="col-1 text-center">
+      <div class="side_left">
+        <%= link_to new_content_path do %>
+        <i class="far fa-plus-square fa-3x"></i>
         <% end %>
-        
-        <div><%= @content.description %></div>
-        
-        <% if current_user.id == @content.user_id %>
-          <div><%= link_to "変更する", edit_content_path(@content) %></div>
-          <div><%= link_to "削除する", content_path, method: :delete, data: { confirm: '本当に削除しますか？' } %></div>
-        <% end %>
-        
-        <%= link_to 'Comment +', content_comments_path(@content) %>
-
-
-
       </div>
     </div>
+
+
+
+
+    <div class="col-10">
+      <div class="text-center">
+        <div class="card mb-5">
+
+          <div>
+            <%= attachment_image_tag @content, :content_image, :fill, 800, 500, format: 'jpg', class: "content-image" %>
+            <div class="card_item1 d-flex pl-2 pt-2">
+                <div class="pl-2 card_item2">
+                  コメント件数：<%= link_to @content.comments.count, content_comments_path(@content.id) %>
+                </div>
+
+                <div class="pl-5 pr-2 card_item2 favorite_buttons_<%= @content.id %>">
+                  <%= render 'favorites/favorite',content: @content %>
+                </div>
+              </div>
+          </div>
+
+          <div class="card_show">
+            <%= link_to user_path(@content.user.id) do %>
+              <div class="card_item1">
+                <%= attachment_image_tag @content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
+              </div>
+            <% end %>
+
+            <div>
+              <div class="card_item1 pt-2 justify-content-center">
+                <h3 class="mb-3">
+                  <%= @content.user.name %>
+                </h3>
+
+                <div class="content_action">
+                  <div>
+                    <% if current_user != @content.user %>
+                      <% if @content.user.followed_by?(current_user) %>
+                        <%= link_to "フォロー解除", user_relationships_path(@content.user.id), method: :delete, class: "btn btn-outline-secondary w-100" %>
+                      <% else %>
+                        <%= link_to "フォローする", user_relationships_path(@content.user.id), method: :post, class: "btn btn-info w-100" %>
+                      <% end %>
+                    <% end %>
+                  </div>
+
+                  <div class="my-3">
+                    <%= link_to 'Comment +', content_comments_path(@content), class: "btn btn-outline-info w-100" %>
+                  </div>
+
+                  <% if current_user.id == @content.user_id %>
+                  <div class="mt-4">
+                    <%= link_to "変更する", edit_content_path(@content), class: "btn btn-outline-info w-100" %>
+                  </div>
+
+                  <div class="mt-2">
+                    <%= link_to "削除する", content_path, class: "btn btn-outline-secondary w-100", method: :delete, data: { confirm: '本当に削除しますか？' } %>
+                  </div>
+                  <% end %>
+                </div>
+              </div>
+
+
+
+              <div class="card mx-5 my-5 px-5 py-3">
+                <div class="px-2">
+                  <%= @content.description %>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+
+
+
+
+    <div class="side_right col-1 text-center">
+      <span id="back">
+        <a href="#">
+          <i class="fas fa-angle-double-up fa-3x mr-3"></i>
+        </a>
+      </span>
+    </div>
+
   </div>
 </div>
+
