--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -79,7 +79,7 @@
             <% end %>
 
             <div class="card_show d-flex flex-row">
-              <%= link_to content_path(content.id) do %>
+              <%= link_to user_path(content.user.id) do %>
                 <div class="p-2 card_item1">
                   <%= attachment_image_tag content.user, :profile_image, :fill, 200, 200, format: 'jpg', fallback: "0.jpeg", class: "user-image", style: "border-style: none;" %>
                 </div>
