--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the chats controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// .message {
+//   width: 60% ;
+// }
+
+// .my_message {
+//   width: 60% ;
+// }
+
+
+// .partner_message {
+//   width: 60% ;
+// }
