--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,35 +1,78 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-12 my-5">
-      <div class="text-center" style="font-size: 100%;">
+
+    <div class="col-1 text-center">
+      <div class="side_left">
+        <%= link_to new_content_path do %>
+        <i class="far fa-plus-square fa-3x"></i>
+        <% end %>
+      </div>
+    </div>
+
+
+
+      <div class="col-10">
+
 
 
 
         <h1>Chats</h1>
-        
+
         <h3 id="room" data-room="<%= @room.id %>" data-user="<%= current_user.id %>"><%= @user.name %> さんとのチャット</h3>
-        
+
         <%= form_with model: @chat do |f| %>
           <div><%= f.text_field :message %></div>
           <div><%= f.hidden_field :room_id %></div>
           <div><%= f.submit %></div>
         <% end %>
-        
+
         <div><%= paginate @chats %></div>
-        
-        <div class="message">
-          <% @chats.each do |chat| %>
-            <% if chat.user_id == current_user.id %>
-              <p style="text-align: right;"><%= chat.message %></p>
-            <% else %>
-              <p style="text-align: left;"><%= chat.message %></p>
-            <% end %>
-          <% end %>
-        </div>
+
+
 
 
 
       </div>
+
+
+
+
+
+    <div class="side_right col-1 text-center">
+      <span id="back">
+        <a href="#">
+          <i class="fas fa-angle-double-up fa-3x mr-3"></i>
+        </a>
+      </span>
+    </div>
+
+  </div>
+
+
+
+  <div class="container-fluid">
+    <div class="row">
+
+      <div class="col-1"></div>
+
+        <div class="col-10 px-0">
+          <div class="message-index">
+
+            <div class="message">
+              <%= render partial:'chats/message',collection: @chats,as:"chat" %>
+              <%# collection: @chats　で　@chats個　分繰り返してる。 %>
+              <%# @chats,as:"chat"　は、@chat に chat を入れている。 %>
+              <%# SQL文を少なくするように .prepend  を採用している。 %>
+            </div>
+
+          </div>
+        </div>
+
+      <div class="col-1"></div>
+
     </div>
   </div>
+
+
+
 </div>
